--- a/pom.xml
+++ b/pom.xml
@@ -7,19 +7,48 @@
     <groupId>dev.thatsmybaby</groupId>
     <artifactId>KitPvP</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
 
+    <modules>
+        <module>shared</module>
+        <module>plugin</module>
+        <module>lobby</module>
+    </modules>
+
+    <repositories>
+        <repository>
+            <id>opencollab-repo-release</id>
+            <url>https://repo.opencollab.dev/maven-releases/</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>opencollab-repo-snapshot</id>
+            <url>https://repo.opencollab.dev/maven-snapshots/</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
+
     <dependencies>
         <dependency>
             <groupId>cn.nukkit</groupId>
-            <artifactId>Nukkit</artifactId>
+            <artifactId>nukkit</artifactId>
             <version>1.0-SNAPSHOT</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/lib/nukkit-1.0-SNAPSHOT.jar</systemPath>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
@@ -31,9 +60,8 @@
 
         <dependency>
             <groupId>com.google.code.gson</groupId>
-            <artifactId>gson-parent</artifactId>
+            <artifactId>gson</artifactId>
             <version>2.8.9</version>
-            <scope>provided</scope>
         </dependency>
     </dependencies>
 
