some listeners added and storage added

--- a/plugin/src/main/resources/config.yml
+++ b/plugin/src/main/resources/config.yml
@@ -2,3 +2,10 @@ type:
   PC: "world"
   Console: "world"
   Mobile: "world"
+
+mysql:
+  host: "127.0.0.1"
+  port: 3306
+  password: ""
+  user: "root"
+  dbname: """
