--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,12 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.11.0</version>
+        </dependency>
+
         <!-- mysql-connector -->
         <dependency>
             <groupId>mysql</groupId>
